--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
     transition: width 1s, height 1s;
 }
 
-@media screen and (max-width: 480px) {
+@media (max-width: 600px) {
     .bpw-floating-button {
         width: 64px;
         height: 64px;
