--- a/style.css
+++ b/style.css
@@ -41,4 +41,9 @@
         width: 128px;
         height: 128px;
     }
+
+    .bp-widget-widget {
+        width: 100px;
+        height: 100px;
+    }
 }
