Trying another altercation for the iframe

--- a/style.css
+++ b/style.css
@@ -41,4 +41,9 @@
         width: 128px;
         height: 128px;
     }
+
+    #bp-web-widget {
+        width: 128px!important;
+        height: 128px!important;
+    }
 }
